fix bidding problems.
