# src/app/services/order/models/order-line-response.ts
@@ -3,6 +3,15 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface OrderLineResponse {
+  brandName?: string;
+  buyNowPrice?: number;
+  colour?: string;
+  description?: string;
   orderLineId?: number;
+  productId?: number;
+  productImageUrl?: string;
+  productName?: string;
+  productSize?: string;
   quantity?: number;
+  startingPrice?: number;
 }
