# src/app/services/product/models/bid.ts
@@ -3,9 +3,21 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface Bid {
+  availableForBuyNow?: boolean;
   bidAmount?: number;
   bidId?: number;
   bidTime?: string;
+  brandName?: string;
+  buyNowPrice?: number;
+  categoryId?: number;
+  colour?: string;
+  description?: string;
   productId?: number;
+  productImageUrl?: string;
+  productName?: string;
+  productSize?: string;
+  quantity?: number;
+  sold?: boolean;
+  startingPrice?: number;
   username?: string;
 }
